Bob:fix index z-index

--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -165,7 +165,7 @@ header
     position absolute
     // top 9.56% // 88/920
     top -50%
-    z-index 2
+    z-index 98
     display block
     .login
         width 100%
@@ -387,6 +387,7 @@ header
     overflow hidden
     .kinds
         position relative
+        z-index 1
         top 25% //230px/920px
         text-align center
         .icon_left
